<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <artifactId>kl-traidingbot</artifactId>
    <build>
        <plugins>
            <plugin>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <groupId>org.springframework.boot</groupId>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.8.1</version>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <configuration>
                            <outputDirectory>${basedir}/target/classes/static/</outputDirectory>
                            <outputDirectory>${basedir}/src/main/resources/static</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${basedir}/../Client/build</directory>
                                    <!--<directory>${basedir}/../Client/dist/Client</directory>-->
                                </resource>
                            </resources>
                        </configuration>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <id>copy-resources</id>
                        <phase>validate</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                    <skipTests>${skipTests}</skipTests>
                </configuration>
                <!--<version>3.0.0-M3</version>-->
                <!--                <version>2.12.4</version>-->
                <groupId>org.apache.maven.plugins</groupId>
                <version>2.22.2</version>
            </plugin>
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-surefire-plugin</artifactId>-->
            <!--                <version>2.22.2</version>-->
            <!--                <configuration>-->
            <!--                    <argLine>-->
            <!--                        &#45;&#45;illegal-access=permit-->
            <!--                    </argLine>-->
            <!--                </configuration>-->
            <!--            </plugin>-->
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>org.springframework.boot</groupId>-->
        <!--            <artifactId>spring-boot-starter-security</artifactId>-->
        <!--        </dependency>-->
        <dependency>
            <artifactId>spring-boot-starter-web</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-validation</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>
        <dependency>
            <artifactId>spring-boot-devtools</artifactId>
            <groupId>org.springframework.boot</groupId>
            <optional>true</optional>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <artifactId>mysql-connector-java</artifactId>
            <groupId>mysql</groupId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-test</artifactId>
            <groupId>org.springframework.boot</groupId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <artifactId>jjwt</artifactId>
            <groupId>io.jsonwebtoken</groupId>
            <version>0.9.1</version>
        </dependency>

        <!-- Websocket dependencies-->
        <dependency>
            <artifactId>spring-boot-starter-websocket</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-messaging -->
        <dependency>
            <artifactId>spring-security-messaging</artifactId>
            <groupId>org.springframework.security</groupId>
            <version>5.1.5.RELEASE</version>
        </dependency>

        <!--Tests dependencies-->
        <!--        <dependency>-->
        <!--            <groupId>org.springframework.security</groupId>-->
        <!--            <artifactId>spring-security-test</artifactId>-->
        <!--            <scope>test</scope>-->
        <!--        </dependency>-->

        <!--  Add missing modules in Java 11  -->
        <!--        <dependency>-->
        <!--            <groupId>javax.annotation</groupId>-->
        <!--            <artifactId>javax.annotation-api</artifactId>-->
        <!--            <version>1.3.2</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>javax.xml.bind</groupId>-->
        <!--            <artifactId>jaxb-api</artifactId>-->
        <!--            <version>2.4.0-b180725.0427</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.glassfish.jaxb</groupId>-->
        <!--            <artifactId>jaxb-runtime</artifactId>-->
        <!--            <version>2.4.0-b180725.0644</version>-->
        <!--        </dependency>-->
    </dependencies>
    <description>Trading Bot for crypto currencies</description>
    <groupId>com.kl.tradingbot</groupId>

    <modelVersion>4.0.0</modelVersion>

    <name>trading-bot</name>
    <packaging>jar</packaging>

    <parent>
        <artifactId>spring-boot-starter-parent</artifactId>
        <groupId>org.springframework.boot</groupId>
        <relativePath/>
        <version>2.4.3</version> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <skipTests>true</skipTests>
    </properties>

    <version>0.0.1-SNAPSHOT</version>

</project>
